--- a/input.html
+++ b/input.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>知识碎片·投稿</title>
+		<title>编程段子·投稿</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<meta name="Keywords" content="万码千钧"/>
-		<meta name="Description" content="郭兴楠的个人主页 -- 知识点投稿。"/>
+		<meta name="Keywords" content="万码千钧,段子,程序员,编程段子"/>
+		<meta name="Description" content="万码千钧-编程段子投稿。"/>
 		<link rel="shortcut icon" href="../img/guo3.ico" type="image/x-icon">
 		<script src="jquery-1.11.3.js"></script>
 		<style type="text/css">
@@ -97,10 +97,10 @@
 			</header>
 			<div id="input_container">
 				<div id="text_length"><span id="num">0</span>/200</div>
-				<textarea name="text" id="in" placeholder="一句话讲述一个知识点" rows="5" maxlength="200" onkeyup="wordStatic(this);"></textarea>
+				<textarea name="text" id="in" placeholder="讲述一个编程段子" rows="5" maxlength="200" onkeyup="wordStatic(this);"></textarea>
 				 
 				<div id="button_list">
-					<button onclick="javascript:location.href='index.html'">列 表</button>
+					<button onclick="javascript:location.href='../fenye'">列 表</button>
 					<button onclick="javascript:location.href='../upload.html'">上 传</button>
 					<button id="random" onclick="getRandom()">随 机</button>
 					<button id="commit">提 交</button>
@@ -185,7 +185,7 @@
 						var res = xhr.responseText;
 						
 						if("ok"==res){
-							location.href="index.html";
+							location.href="../fenye";
 						}else{
 							jQuery("#show").html("提交失败！");
 						}
