--- a/timeline.html
+++ b/timeline.html
@@ -6,7 +6,7 @@
         <title>时间机器</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="Keywords" content="万码千钧"/>
-		<meta name="Description" content="郭兴楠的个人主页 -- 知识点投稿。"/>
+		<meta name="Description" content="郭兴楠的个人主页 -- 大事记。"/>
 		<link rel="shortcut icon" href="../img/guo3.ico" type="image/x-icon">
         <style>
             * {
@@ -133,13 +133,16 @@
         <div id="header">时 间 机 器</div>
 		
         <div id="main">
-            <div class="louceng" style="background: papayawhip;">
+            <div class="louceng"  style="background: #787811;">
 				<div class="year_block"><a name="a2018"></a>
 					<h1 class="v_year">2018</h1>
 					<div class="month_block">
 						<h3 class="v_month">3月</h3>
 						<div class="content">
 							<p class="todolist">读完《货币战争》</p>
+							<p>27-29日，C++训练营</p>
+							<p>23日，第一次在海底捞吃饭</p>
+							<p>22日，吴杰帮我找了新住处</p>
 							<p>17日，剪了头发</p>
 							<p>16日，第一次装Linux系统</p>
 							<p>8日，家里新添一成员</p>
@@ -176,7 +179,7 @@
 				</div>
 			</div>
 			
-            <div class="louceng" style="background: peachpuff;">
+            <div class="louceng" style="background:#c0c0c0;">
 			
 				<div class="year_block"><a name="a2017"></a>
 					<h1 class="v_year">2017</h1>
@@ -226,7 +229,7 @@
 				</div>
 			</div>
 			
-            <div class="louceng" style="background: pink;">
+            <div class="louceng"  style="background: #90a8a5;">
 					<div class="year_block"><a name="a2015"></a>
 					<h1 class="v_year">2015</h1>
 					<div class="month_block">
@@ -284,13 +287,7 @@
 			</div>
 		</div>
 		
-		<footer>
-			<ul>
-				<li><a href="./">知识列表</a></li>
-				<li><a href="./input.html">发布知识</a></li>
-				<li><a href="../">万码千钧</a></li>
-			</ul>
-		</footer>
+
 		
         <script>
 		
